<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:ellipsize="start"
        android:gravity="center|right"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:text="0"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/tlCalc"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="264dp" />

    <TableLayout
        android:id="@+id/tlCalc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:weightSum="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bSqrt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/sqrt"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/bPercent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/percent"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/bDivide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="0"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/divide"
                android:textSize="18sp"
                app:iconPadding="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s7"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/b8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s8"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/b9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s9"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/bMultiply"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/multiply"
                android:textSize="18sp"
                app:iconPadding="2dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s4"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/b5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s5"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/b6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s6"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/bSubtraction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/subtraction"
                android:textSize="18sp"
                app:iconPadding="2dp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s1"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/b2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s2"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/b3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s3"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/bAddition"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/addition"
                android:textSize="18sp"
                app:iconPadding="2dp" />


        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bClear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/clear"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/b0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/s0"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/bDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"
                android:text="@string/sDot"
                android:textSize="18sp"
                app:iconPadding="2dp" />

            <Button
                android:id="@+id/bEqual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="1"
                android:layout_weight="1"
                android:insetLeft="1dp"
                android:insetTop="1dp"
                android:insetRight="1dp"
                android:insetBottom="1dp"
                android:minHeight="100dip"

                android:text="@string/equal" />


        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

